# resume

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  THANKS  acinclude.m4  aclocal.m4  configure  configure.ac
doc/: david.syzdek-resume.html  david.syzdek-resume.txt  syzdek-resume.info  syzdek-resume.texi  version-syzdek-resume.texi
